// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Map/MarkerCircle Active 1`] = `
<button
  className="css-19biojz-MarkerCircle"
  onClick={[Function]}
/>
`;

exports[`Storyshots Map/MarkerCircle Inactive 1`] = `
<button
  className="css-gd93gz-MarkerCircle"
  onClick={[Function]}
/>
`;

exports[`Storyshots MarkerCircle Active 1`] = `
<button
  className="css-19biojz-MarkerCircle"
  onClick={[Function]}
/>
`;

exports[`Storyshots MarkerCircle Inactive 1`] = `
<button
  className="css-gd93gz-MarkerCircle"
  onClick={[Function]}
/>
`;
